resources/tests/files/fail/WrongGenericCount.krna


fn f(i: GenericStruct) {

}

struct GenericStruct<T> {
    value: T
}